# f1-stats-analyzer

./: CMakeLists.txt  main.cpp  util.cpp  util.h
f1udpinterface/: public.h
f1udpinterface/ids/: ButtonFlags.cpp  ButtonFlags.h  DriverId.cpp  DriverId.h  GameModeId.cpp  GameModeId.h  InfringementTypeId.cpp  InfringementTypeId.h  NationalityId.cpp  NationalityId.h  PenaltyTypeId.cpp  PenaltyTypeId.h  RulesetId.cpp  RulesetId.h  SurfaceTypeId.cpp  SurfaceTypeId.h  TeamId.cpp  TeamId.h  TrackId.cpp  TrackId.h
f1udpinterface/ids/src/: ButtonFlags.cpp  DriverId.cpp  GameModeId.cpp  InfringementTypeId.cpp  NationalityId.cpp  PenaltyTypeId.cpp  RulesetId.cpp  SurfaceTypeId.cpp  TeamId.cpp  TrackId.cpp
f1udpinterface/packets/: CarDamageData.cpp  CarDamageData.h  CarSetupData.cpp  CarSetupData.h  CarStatusData.cpp  CarStatusData.h  CarTelemetryData.cpp  CarTelemetryData.h  EventData.cpp  EventData.h  FinalClassificationData.cpp  FinalClassificationData.h  LapData.cpp  LapData.h  LobbyInfoData.cpp  LobbyInfoData.h  MotionData.cpp  MotionData.h  Packet.cpp  Packet.h  PacketCarDamageData.cpp  PacketCarDamageData.h  PacketCarSetupData.cpp  PacketCarSetupData.h  PacketCarStatusData.cpp  PacketCarStatusData.h  PacketCarTelemetryData.cpp  PacketCarTelemetryData.h  PacketEventData.cpp  PacketEventData.h  PacketFactory.h  PacketFinalClassificationData.cpp  PacketFinalClassificationData.h  PacketHeader.cpp  PacketHeader.h  PacketLapData.cpp  PacketLapData.h  PacketLobbyInfoData.cpp  PacketLobbyInfoData.h  PacketMotionData.cpp  (+13 more)
f1udpinterface/packets/src/: CarDamageData.cpp  CarSetupData.cpp  CarStatusData.cpp  CarTelemetryData.cpp  EventData.cpp  FinalClassificationData.cpp  LapData.cpp  LobbyInfoData.cpp  MotionData.cpp  Packet.cpp  PacketFactory.cpp  PacketHeader.cpp  ParticipantsData.cpp  SessionData.cpp  SessionHistoryData.cpp
gui/: CarActivationButton.cpp  CarActivationButton.h  TeamColorMapping.cpp  TeamColorMapping.h  Worker.cpp  Worker.h
